--- a/app/src/main/res/layout/header_profile.xml
+++ b/app/src/main/res/layout/header_profile.xml
@@ -24,7 +24,8 @@
             android:layout_marginTop="@dimen/space_medium"
             app:srcCompat="@drawable/ic_person_with_background"
             app:imageUri="@{user.imageUri}"
-            app:placeholder="@{@drawable/ic_person_with_background}"
+            app:placeholder="@{user.imageUri != null ? @drawable/anim_loading : @drawable/ic_person_with_background}"
+            app:error="@{@drawable/ic_person_with_background}"
             android:background="@drawable/background_double_ring"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
