--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -44,30 +44,43 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_large"
             android:hint="@string/lbl_name"
             app:error="@{viewModel.showErrors ? viewModel.nameError : null}"
-            app:layout_constraintTop_toBottomOf="@id/btn_change_photo">
+            app:layout_constraintTop_toBottomOf="@id/btn_change_photo"
+            app:layout_constraintStart_toStartOf="@id/til_username"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <EditText
                 android:id="@+id/edt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:nextFocusForward="@id/edt_username"
+                android:inputType="textCapWords"
                 android:text="@={viewModel.name}" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/txt_at"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_medium"
+            android:text="@string/lbl_at_symbol"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/til_username"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_username"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
             android:hint="@string/lbl_username"
             app:error="@{viewModel.showErrors ? viewModel.usernameError : null}"
+            app:layout_constraintStart_toEndOf="@id/txt_at"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_name">
 
             <EditText
@@ -81,16 +94,19 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_biography"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
             android:hint="@string/lbl_biography"
-            app:layout_constraintTop_toBottomOf="@id/til_username">
+            app:layout_constraintTop_toBottomOf="@id/til_username"
+            app:layout_constraintStart_toStartOf="@id/til_username"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:inputType="textCapSentences"
                 android:text="@={viewModel.biography}" />
 
         </com.google.android.material.textfield.TextInputLayout>
