--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -67,10 +67,10 @@
             android:id="@+id/txt_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_medium"
+            android:layout_marginTop="@dimen/space_large"
             android:text="@string/lbl_at_symbol"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/til_username"/>
+            app:layout_constraintTop_toTopOf="@id/til_username"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_username"
